<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity" tools:layout_editor_absoluteY="81dp">

    <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/loginButton"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editAccessToken" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <AutoCompleteTextView
            android:id="@+id/editUser"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:hint="@string/userId"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.52"/>

    <AutoCompleteTextView
            android:id="@+id/editOrg"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:hint="@string/organization"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editUser"/>

    <EditText
            android:id="@+id/editAccessToken"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/AccessToken"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.483" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/editOrg" android:importantForAutofill="no" tools:targetApi="o"/>

</androidx.constraintlayout.widget.ConstraintLayout>