<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">


    <ImageView
            android:layout_width="235dp"
            android:layout_height="239dp" app:srcCompat="@drawable/icon_yama"
            android:id="@+id/Logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="120dp"
            android:layout_height="63dp"
            android:id="@+id/button-login" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Logo" android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.369" android:textSize="24sp"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp" android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintHorizontal_bias="0.501"/>
    <TextView
            android:text="@string/yet_another_messaging_aplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.571"
            android:textSize="20sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:textColor="@color/design_default_color_on_secondary"/>
</androidx.constraintlayout.widget.ConstraintLayout>